--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "muvex-presupuestos",
   "private": true,
-  "version": "0.2.0",
+  "version": "0.3.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,6 +12,7 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "@vercel/postgres": "0.8.0"
+    "@vercel/postgres": "0.8.0",
+    "docx-templates": "7.8.3"
   }
 }
